--- a/K4AUnityBTPlugin/CppSimpleStream/CppSimpleStream.vcxproj
+++ b/K4AUnityBTPlugin/CppSimpleStream/CppSimpleStream.vcxproj
@@ -100,6 +100,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>C:\Program Files\Unity\Hub\Editor\2021.3.22f1\Editor\Data\PluginAPI;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
